cmake_minimum_required(VERSION 3.20)
project(boj)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS on)

# Please do not manually edit below since new executable will be automatically added below.
add_executable(13264.exe 13264.cpp)
add_executable(13358.exe 13358.cpp)
add_executable(14245.exe 14245.cpp)
add_executable(3033.exe 3033.cpp)
add_executable(7469.exe 7469.cpp)
add_executable(8462.exe 8462.cpp)
add_executable(9248.exe 9248.cpp)

